--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <p>This is my local repo</p>
-    <p>This is my new feature1</p>
+    <p>This is my new feature1 (button)</p>
 </body>
 
 </html>
